--- a/test/src/Makefile
+++ b/test/src/Makefile
@@ -1,4 +1,4 @@
-export TF_CLI_ARGS_init ?= -get-plugins=true
+export TERRAFORM_VERSION ?= $(shell curl -s https://checkpoint-api.hashicorp.com/v1/check/terraform | jq -r -M '.current_version' | cut -d. -f1)
 
 .DEFAULT_GOAL : all
 
@@ -14,16 +14,13 @@ init:
 .PHONY : test
 ## Run tests
 test: init
-	# Verify we have valid AWS credential
-	if command -v aws >/dev/null; then \
-	  (unset AWS_PROFILE; aws sts get-caller-identity >/dev/null); \
-	fi
-	go test -v -timeout 10m -run TestExamplesComplete
+	go mod download
+	go test -v -timeout 15m -run TestExamplesComplete
 
 ## Run tests in docker container
 docker/test:
 	docker run --name terratest --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -e GITHUB_TOKEN \
-		-e PATH="/usr/local/terraform/0.13/bin:/go/bin:/usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" \
+		-e PATH="/usr/local/terraform/$(TERRAFORM_VERSION)/bin:/go/bin:/usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" \
 		-v $(CURDIR)/../../:/module/ cloudposse/test-harness:latest -C /module/test/src test
 
 .PHONY : clean
